# nypd-backend-init

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
api/user/v1/: user.py
app/: server.py
app/user/models/: user.py
app/user/schemas/: user.py
app/user/services/: user.py
core/: config.py
core/db/: session.py
core/exceptions/: __init__.py
docker/api/: Dockerfile  startup.sh
docker/db/: Dockerfile
tests/app/user/services/: test_user.py
